2007-03-05  Lars Clausen  <lars@raeder.dk>

	* lib/diaarrowchooser.c: Use _dia_translate instead of gettext for
	tooltips and "Details...".  Fixes bug #406066.
	
	* app/diagram_tree_menu.c (create_factory): Add translate_func to
	item factory.

	* plug-ins/metapost/render_metapost.c: Patch from Robert Young 
	<robert.young%40dsto.defence.gov.au>: Scale text correctly with
	page scaling.

2007-03-04  Lars Clausen  <lars@raeder.dk>

	* app/export_png.c (export_png_ok): 
	* plug-ins/pixbuf/pixbuf.c (export_data): Fix rounding error of
	bitmap export.  Fixes bug #413275.

	* app/diagram.c (diagram_load): Correctly update title on
	defaulted diagrams.

	* objects/UML/class.c:
	* objects/UML/class_dialog.c: 
	* objects/standard/line.c (line_save): #ifdef DEBUG'ed out sanity
	check calls.

2007-02-26  Lars Clausen  <lars@raeder.dk>

	* NEWS: 
	* RELEASE-PROCESS: 
	* config.h.win32: 
	* doc/en/dia.xml: 
	* doc/pl/dia.xml: 
	* doc/eu/dia.xml:
	* configure.in: Pre5

2007-02-25  Gabor Kelemen  <kelemeng@gnome.hu>

	* installer/win32/locale/hungarian.nsh: 
	* installer/win32/dia.nsi: Hungarian installer translation added.

2007-02-18  Hans Breuer  <hans@breuer.org>

	* app/diagram.c : moved diagram only stuff from diagram_load_into() to
	diagram_load() so ...
	* app/interface.c : ... we can use diagram_load_into() to drop files
	on the canvas, i.e. really load them _into_ an exisiting diagram

	* plug-ins/python/pydia-property.c : better debug support for wrong
	types in lists (of lists) when doing array assignments 
	(e.g. uml_class::operations)
	* plug-ins/python/doxrev.py : an import filter for XML generated by
	doxygen. One step further to do reverse engineering with Dia.
	* plug-ins/python/Makefile.am : at the moment only added to EXTRA_DIST

2007-02-17  Lars Clausen  <lars@raeder.dk>

        * objects/UML/class.c
        * objects/UML/object.c
        * objects/UML/state.c
        * objects/UML/small_package.c