@@ -8,7 +8,7 @@
 
   [
 
-    <!ENTITY VERSION "0.96-pre5">
+    <!ENTITY VERSION "0.96-pre6">
 
     <!ENTITY INTRODUCTION SYSTEM "intro.xml">
 
