@@ -1,3 +1,8 @@
+dia-0.96-pre6: 5-Mar-2007
+
+  * Sixth prerelease for 0.96.  I18n fixes, debugging output removed, some
+    export fixes, and titles on defaulted diagrams.
+
 dia-0.96-pre5: 26-Feb-2007
 
   * Fifth prerelease for 0.96.  A fix of a number of text-related crash
